--- a/src/view/Expenses.fxml
+++ b/src/view/Expenses.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
@@ -8,11 +9,14 @@
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="700.0" style="-fx-background-color: #088f8f;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.ExpensesController">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="700.0" style="-fx-background-color: #088f8f;" stylesheets="@styleSheet.css" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.ExpensesController">
    <top>
       <AnchorPane prefHeight="67.0" prefWidth="600.0" style="-fx-background-color: #ffffff;" BorderPane.alignment="CENTER">
          <children>
@@ -21,7 +25,7 @@
                   <Font size="36.0" />
                </font>
             </Text>
-            <Button fx:id="home" alignment="CENTER" layoutX="570.0" layoutY="12.0" mnemonicParsing="false" onAction="#home" style="-fx-background-color: #088f8f;" AnchorPane.rightAnchor="14.0">
+            <Button fx:id="home" alignment="CENTER" layoutX="570.0" layoutY="12.0" mnemonicParsing="false" onAction="#home" style="-fx-background-color: #088f8f;" styleClass="btn" stylesheets="@styleSheet.css" AnchorPane.rightAnchor="14.0">
                <graphic>
                   <ImageView fitHeight="75.0" fitWidth="100.0" pickOnBounds="true" preserveRatio="true">
                      <image>
@@ -32,61 +36,78 @@
          </children>
       </AnchorPane>
    </top>
-   <right>
-      <VBox alignment="TOP_CENTER" prefHeight="433.0" prefWidth="183.0" BorderPane.alignment="CENTER">
+   <center>
+      <GridPane BorderPane.alignment="CENTER">
+        <columnConstraints>
+          <ColumnConstraints hgrow="ALWAYS" maxWidth="1.7976931348623157E308" minWidth="10.0" prefWidth="550.0" />
+          <ColumnConstraints hgrow="SOMETIMES" maxWidth="150.0" minWidth="10.0" prefWidth="150.0" />
+        </columnConstraints>
+        <rowConstraints>
+          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="ALWAYS" />
+        </rowConstraints>
          <children>
-            <Button fx:id="add_expense" mnemonicParsing="false" onAction="#add_expense" style="-fx-background-color: #ffffff;">
-               <graphic>
-                  <ImageView fitHeight="100.0" fitWidth="100.0" pickOnBounds="true" preserveRatio="true">
-                     <image>
-                        <Image url="@../image/add.png" />
-                     </image>
-                  </ImageView>
-               </graphic>
-               <VBox.margin>
-                  <Insets top="25.0" />
-               </VBox.margin>
-            </Button>
-            <Button fx:id="remove_expense" mnemonicParsing="false" onAction="#remove_expense" style="-fx-background-color: #ffffff;">
-               <graphic>
-                  <ImageView fitHeight="100.0" fitWidth="100.0" pickOnBounds="true" preserveRatio="true">
-                     <image>
-                        <Image url="@../image/remove.png" />
-                     </image>
-                  </ImageView>
-               </graphic>
-               <VBox.margin>
-                  <Insets top="50.0" />
-               </VBox.margin>
-            </Button>
-            <Button fx:id="edit_category" mnemonicParsing="false" onAction="#edit_category" style="-fx-background-color: #ffffff;">
-               <graphic>
-                  <ImageView fitHeight="100.0" fitWidth="100.0" pickOnBounds="true" preserveRatio="true">
-                     <image>
-                        <Image url="@../image/modify.png" />
-                     </image>
-                  </ImageView>
-               </graphic>
-               <VBox.margin>
-                  <Insets top="50.0" />
-               </VBox.margin>
-            </Button>
+            <VBox alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308">
+               <children>
+                  <TableView fx:id="expenses_table" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="413.0" prefWidth="550.0" VBox.vgrow="ALWAYS">
+                    <columns>
+                      <TableColumn fx:id="ID" maxWidth="1.7976931348623157E308" minWidth="50.0" prefWidth="53.0" resizable="false" text="ID" />
+                        <TableColumn fx:id="name" maxWidth="1.7976931348623157E308" minWidth="50.0" prefWidth="88.0" resizable="false" text="Name" />
+                        <TableColumn fx:id="date" maxWidth="1.7976931348623157E308" minWidth="50.0" prefWidth="79.0" text="Date" />
+                        <TableColumn fx:id="category" maxWidth="1.7976931348623157E308" prefWidth="127.0" text="Category" />
+                        <TableColumn fx:id="units" maxWidth="1.7976931348623157E308" prefWidth="64.0" text="Units" />
+                        <TableColumn fx:id="cost" maxWidth="1.7976931348623157E308" minWidth="0.0" prefWidth="74.0" text="Cost" />
+                        <TableColumn fx:id="image" maxWidth="1.7976931348623157E308" prefWidth="49.0" text="More" />
+                    </columns>
+                     <VBox.margin>
+                        <Insets bottom="10.0" left="15.0" top="10.0" />
+                     </VBox.margin>
+                  </TableView>
+               </children>
+            </VBox>
+            <VBox alignment="TOP_CENTER" prefHeight="433.0" prefWidth="183.0" GridPane.columnIndex="1">
+               <children>
+                  <Button fx:id="add_expense" mnemonicParsing="false" onAction="#add_expense" style="-fx-background-color: #ffffff;" styleClass="btn">
+                     <graphic>
+                        <ImageView fitHeight="100.0" fitWidth="100.0" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@../image/add.png" />
+                           </image>
+                           <cursor>
+                              <Cursor fx:constant="DEFAULT" />
+                           </cursor>
+                        </ImageView>
+                     </graphic>
+                     <VBox.margin>
+                        <Insets top="25.0" />
+                     </VBox.margin>
+                  </Button>
+                  <Button fx:id="remove_expense" mnemonicParsing="false" onAction="#remove_expense" style="-fx-background-color: #ffffff;" styleClass="btn" stylesheets="@styleSheet.css">
+                     <graphic>
+                        <ImageView fitHeight="100.0" fitWidth="100.0" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@../image/remove.png" />
+                           </image>
+                        </ImageView>
+                     </graphic>
+                     <VBox.margin>
+                        <Insets top="50.0" />
+                     </VBox.margin>
+                  </Button>
+                  <Button fx:id="edit_category" mnemonicParsing="false" onAction="#edit_expense" style="-fx-background-color: #ffffff;" styleClass="btn">
+                     <graphic>
+                        <ImageView fitHeight="100.0" fitWidth="100.0" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@../image/modify.png" />
+                           </image>
+                        </ImageView>
+                     </graphic>
+                     <VBox.margin>
+                        <Insets top="50.0" />
+                     </VBox.margin>
+                  </Button>
+               </children>
+            </VBox>
          </children>
-      </VBox>
-   </right>
-   <left>
-      <TableView fx:id="expenses_table" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="413.0" prefWidth="550.0" BorderPane.alignment="CENTER">
-        <columns>
-          <TableColumn maxWidth="122.0" minWidth="50.0" prefWidth="53.0" resizable="false" text="ID" />
-            <TableColumn maxWidth="113.0" minWidth="50.0" prefWidth="113.0" resizable="false" text="Name" />
-            <TableColumn minWidth="50.0" prefWidth="89.0" text="Date" />
-            <TableColumn prefWidth="144.0" text="Category" />
-            <TableColumn prefWidth="65.0" text="Units" />
-            <TableColumn prefWidth="85.0" text="Cost" />
-        </columns>
-         <BorderPane.margin>
-            <Insets bottom="10.0" left="10.0" top="10.0" />
-         </BorderPane.margin>
-      </TableView>
-   </left>
+      </GridPane>
+   </center>
 </BorderPane>
