--- a/src/view/LogIn.fxml
+++ b/src/view/LogIn.fxml
@@ -1,66 +1,139 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
-<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="700.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.LogIn2Controller">
-   <left>
-      <AnchorPane prefHeight="500.0" prefWidth="350.0" style="-fx-background-color: #088F8F;" BorderPane.alignment="CENTER">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="700.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.LogIn2Controller">
+   <center>
+      <HBox alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minWidth="-Infinity" prefHeight="500.0" prefWidth="700.0" BorderPane.alignment="CENTER">
          <children>
-            <Text fill="WHITE" layoutX="38.0" layoutY="179.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Expenses Manager" textAlignment="CENTER" wrappingWidth="272.3363571166992">
-               <font>
-                  <Font name="System Bold" size="24.0" />
-               </font>
-            </Text>
-            <Text fill="WHITE" layoutX="14.0" layoutY="360.0" strokeType="OUTSIDE" strokeWidth="0.0" text="This project was done by:">
-               <font>
-                  <Font size="14.0" />
-               </font>
-            </Text>
-            <Text fill="WHITE" layoutX="14.0" layoutY="385.0" strokeType="OUTSIDE" strokeWidth="0.0" text="- Mohamed Aziz Ben Hassen">
-               <font>
-                  <Font size="10.0" />
-               </font>
-            </Text>
-            <Text fill="WHITE" layoutX="15.0" layoutY="408.0" strokeType="OUTSIDE" strokeWidth="0.0" text="- Leonardo David Cárdenas Peralta">
-               <font>
-                  <Font size="10.0" />
-               </font>
-            </Text>
-            <Text fill="WHITE" layoutX="14.0" layoutY="433.0" strokeType="OUTSIDE" strokeWidth="0.0" text="- Daniel Tejada Astor">
-               <font>
-                  <Font size="10.0" />
-               </font>
-            </Text>
+            <VBox alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="350.0" style="-fx-background-color: #088F8F;">
+               <children>
+                  <HBox alignment="CENTER" prefHeight="335.0" prefWidth="113.0">
+                     <children>
+                        <VBox prefHeight="335.0" prefWidth="0.0">
+                           <children>
+                              <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="Expenses Manager" textAlignment="CENTER" wrappingWidth="272.3363571166992" VBox.vgrow="ALWAYS">
+                                 <font>
+                                    <Font name="System Bold" size="34.0" />
+                                 </font>
+                              </Text>
+                              <ImageView fitHeight="244.0" fitWidth="681.0" pickOnBounds="true" preserveRatio="true" VBox.vgrow="ALWAYS">
+                                 <image>
+                                    <Image url="@../image/logInIcon.png" />
+                                 </image>
+                              </ImageView>
+                           </children>
+                        </VBox>
+                     </children>
+                  </HBox>
+                  <HBox alignment="CENTER_LEFT" prefHeight="100.0" prefWidth="200.0">
+                     <children>
+                        <VBox prefHeight="200.0" prefWidth="100.0">
+                           <children>
+                              <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="This project was done by:">
+                                 <font>
+                                    <Font size="20.0" />
+                                 </font>
+                              </Text>
+                              <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="- Mohamed Aziz Ben Hassen">
+                                 <font>
+                                    <Font size="15.0" />
+                                 </font>
+                              </Text>
+                              <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="- Leonardo David Cárdenas Peralta">
+                                 <font>
+                                    <Font size="15.0" />
+                                 </font>
+                              </Text>
+                              <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="- Daniel Tejada Astor">
+                                 <font>
+                                    <Font size="15.0" />
+                                 </font>
+                              </Text>
+                           </children>
+                           <HBox.margin>
+                              <Insets left="10.0" />
+                           </HBox.margin>
+                        </VBox>
+                     </children>
+                     <VBox.margin>
+                        <Insets top="20.0" />
+                     </VBox.margin>
+                  </HBox>
+               </children>
+            </VBox>
+            <VBox alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minWidth="-Infinity" prefHeight="500.0" prefWidth="350.0" HBox.hgrow="ALWAYS">
+               <children>
+                  <HBox alignment="CENTER" prefHeight="315.0" prefWidth="350.0">
+                     <children>
+                        <VBox prefHeight="305.0" prefWidth="350.0">
+                           <children>
+                              <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
+                                 <children>
+                                    
+                                                                        <Text fill="#088f8f" strokeType="OUTSIDE" strokeWidth="0.0" text="Login Form" textAlignment="CENTER" wrappingWidth="128.59333038330078">
+                                       <font>
+                                          <Font size="21.0" />
+                                       </font>
+                                    </Text>
+                                 </children>
+                              </HBox>
+                              <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
+                                 <children>
+                                    <ImageView fitHeight="21.0" fitWidth="22.0" pickOnBounds="true" preserveRatio="true" translateX="-17.0" translateY="3.0">
+                                       <HBox.margin>
+                                          <Insets />
+                                       </HBox.margin>
+                                       <image>
+                                          <Image url="@../image/user.png" />
+                                       </image>
+                                    </ImageView>
+                                    <TextField fx:id="usernameField" maxWidth="-Infinity" minWidth="-Infinity" prefHeight="26.0" prefWidth="146.0" promptText="User Name" style="-fx-background-color: transparent; -fx-border-color: #088F8F; -fx-border-width: 0 0 1px 0;" translateX="-10.0" />
+                                 </children>
+                              </HBox>
+                              <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
+                                 <children>
+                                    <ImageView fitHeight="22.0" fitWidth="20.0" pickOnBounds="true" preserveRatio="true" translateX="-17.0" translateY="3.0">
+                                       <image>
+                                          <Image url="@../image/key.png" />
+                                       </image>
+                                    </ImageView>
+                                    <PasswordField fx:id="passwordField" promptText="Password" style="-fx-background-color: transparent; -fx-border-color: #088F8F; -fx-border-width: 0 0 1 0;" translateX="-10.0" />
+                                 </children>
+                              </HBox>
+                              <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
+                                 <children>
+                                    <Label fx:id="erroeLabel" text="Wrong Credentials, Try again." textFill="RED" />
+                                 </children>
+                              </HBox>
+                              <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
+                                 <children>
+                                    <Button fx:id="logInButton" mnemonicParsing="false" onAction="#logIn" prefHeight="26.0" prefWidth="112.0" styleClass="btn" stylesheets="@styleSheet.css" text="Login" textFill="WHITE" />
+                                 </children>
+                              </HBox>
+                              <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
+                                 <children>
+                                    <Button fx:id="signupButton" mnemonicParsing="false" onAction="#signUp" prefHeight="26.0" prefWidth="112.0" styleClass="btn" stylesheets="@styleSheet.css" text="Sign up" textFill="WHITE" />
+                                 </children>
+                              </HBox>
+                           </children>
+                        </VBox>
+                     </children>
+                  </HBox>
+               </children>
+            </VBox>
          </children>
-      </AnchorPane>
-   </left>
-   <right>
-      <AnchorPane prefHeight="500.0" prefWidth="382.0" stylesheets="@styleSheet.css" BorderPane.alignment="CENTER">
-         <children>
-            <TextField fx:id="usernameField" layoutX="101.0" layoutY="166.0" promptText="User Name" style="-fx-background-color: transparent; -fx-border-color: #088F8F; -fx-border-width: 0 0 1px 0;" />
-            <PasswordField fx:id="passwordField" layoutX="101.0" layoutY="214.0" promptText="Paasword" style="-fx-background-color: transparent; -fx-border-color: #088F8F; -fx-border-width: 0 0 1 0;" />
-            <Button fx:id="logInButton" layoutX="119.0" layoutY="268.0" mnemonicParsing="false" onAction="#logIn" prefHeight="26.0" prefWidth="112.0" styleClass="btn" stylesheets="@styleSheet.css" text="Login" textFill="WHITE" />
-            <Text fill="#088f8f" layoutX="121.0" layoutY="398.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Not registered?" textAlignment="CENTER" wrappingWidth="107.40003204345703">
-               <font>
-                  <Font name="Microsoft JhengHei" size="12.0" />
-               </font>
-            </Text>
-            <Button fx:id="signupButton" layoutX="118.0" layoutY="423.0" mnemonicParsing="false" onAction="#signUp" prefHeight="26.0" prefWidth="112.0" styleClass="btn" text="Sign up" textFill="WHITE" />
-            
-            <Text fill="#088f8f" layoutX="107.0" layoutY="96.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Login Form" textAlignment="CENTER" wrappingWidth="128.59333038330078">
-               <font>
-                  <Font size="18.0" />
-               </font>
-            </Text>
-            <Label fx:id="erroeLabel" layoutX="98.0" layoutY="339.0" text="Wrong Credentials, Try again." textFill="RED" />
-         </children>
-      </AnchorPane>
-   </right>
+      </HBox>
+   </center>
 </BorderPane>
