--- a/src/view/User_data.fxml
+++ b/src/view/User_data.fxml
@@ -2,8 +2,7 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.PasswordField?>
-<?import javafx.scene.control.SplitPane?>
+<?import javafx.scene.control.Hyperlink?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
@@ -14,7 +13,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="700.0" style="-fx-background-color: #088f8f;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.User_dataController">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="700.0" style="-fx-background-color: #088f8f;" stylesheets="@styleSheet.css" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.User_dataController">
    <top>
       <AnchorPane prefHeight="67.0" prefWidth="600.0" style="-fx-background-color: #ffffff;" BorderPane.alignment="CENTER">
          <children>
@@ -27,123 +26,93 @@
       </AnchorPane>
    </top>
    <center>
-      <SplitPane fx:id="splitPane" dividerPositions="0.5777262180974478" orientation="VERTICAL" prefHeight="200.0" prefWidth="160.0" BorderPane.alignment="CENTER">
-        <items>
-          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="100.0" prefWidth="160.0" style="-fx-background-color: #088f8f;">
+    <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="100.0" prefWidth="160.0" style="-fx-background-color: #088f8f;" BorderPane.alignment="CENTER">
+         <children>
+            <HBox alignment="CENTER_LEFT" layoutY="-2.0" prefHeight="435.0" prefWidth="700.0">
                <children>
-                  <HBox alignment="CENTER_LEFT" prefHeight="219.0" prefWidth="700.0">
+                  <VBox prefHeight="435.0" prefWidth="296.0">
                      <children>
-                        <VBox prefHeight="219.0" prefWidth="258.0">
-                           <children>
-                              <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="Name:">
-                                 <VBox.margin>
-                                    <Insets bottom="10.0" left="10.0" top="10.0" />
-                                 </VBox.margin>
-                                 <font>
-                                    <Font size="20.0" />
-                                 </font>
-                              </Text>
-                              <TextField fx:id="name">
-                                 <VBox.margin>
-                                    <Insets left="10.0" />
-                                 </VBox.margin>
-                              </TextField>
-                              <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="Surname:">
-                                 <VBox.margin>
-                                    <Insets bottom="10.0" left="10.0" top="10.0" />
-                                 </VBox.margin>
-                                 <font>
-                                    <Font size="20.0" />
-                                 </font>
-                              </Text>
-                              <TextField fx:id="surname">
-                                 <VBox.margin>
-                                    <Insets left="10.0" />
-                                 </VBox.margin>
-                              </TextField>
-                              <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="Email:">
-                                 <VBox.margin>
-                                    <Insets bottom="10.0" left="10.0" top="10.0" />
-                                 </VBox.margin>
-                                 <font>
-                                    <Font size="20.0" />
-                                 </font>
-                              </Text>
-                              <TextField fx:id="email">
-                                 <VBox.margin>
-                                    <Insets left="10.0" />
-                                 </VBox.margin>
-                              </TextField>
-                           </children>
-                        </VBox>
-                        <VBox alignment="TOP_CENTER" prefHeight="200.0" prefWidth="100.0">
-                           <HBox.margin>
-                              <Insets left="160.0" />
-                           </HBox.margin>
-                           <children>
-                              <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="Profile picture">
-                                 <VBox.margin>
-                                    <Insets top="10.0" />
-                                 </VBox.margin>
-                                 <font>
-                                    <Font size="20.0" />
-                                 </font>
-                              </Text>
-                              <Button fx:id="image" mnemonicParsing="false" onAction="#add_image" style="-fx-background-color: #ffffff;" textFill="#d70000">
-                                 <graphic>
-                                    <ImageView fx:id="profileImage" fitHeight="150.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true">
-                                       <image>
-                                          <Image url="@../image/add_photo.png" />
-                                       </image>
-                                    </ImageView>
-                                 </graphic>
-                                 <VBox.margin>
-                                    <Insets top="20.0" />
-                                 </VBox.margin>
-                              </Button>
-                           </children>
-                        </VBox>
+                        <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="Update credentials:">
+                           <font>
+                              <Font size="15.0" />
+                           </font>
+                           <VBox.margin>
+                              <Insets bottom="10.0" left="10.0" top="30.0" />
+                           </VBox.margin>
+                        </Text>
+                        <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="Name:">
+                           <VBox.margin>
+                              <Insets bottom="20.0" left="10.0" top="2.0" />
+                           </VBox.margin>
+                           <font>
+                              <Font size="20.0" />
+                           </font>
+                        </Text>
+                        <TextField fx:id="name" prefHeight="25.0" prefWidth="122.0" promptText="Enter your name">
+                           <VBox.margin>
+                              <Insets bottom="20.0" left="10.0" />
+                           </VBox.margin>
+                        </TextField>
+                        <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="Surname:">
+                           <VBox.margin>
+                              <Insets bottom="20.0" left="10.0" top="10.0" />
+                           </VBox.margin>
+                           <font>
+                              <Font size="20.0" />
+                           </font>
+                        </Text>
+                        <TextField fx:id="surname" promptText="Enter your surname">
+                           <VBox.margin>
+                              <Insets bottom="20.0" left="10.0" />
+                           </VBox.margin>
+                        </TextField>
+                        <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="Email:">
+                           <VBox.margin>
+                              <Insets bottom="20.0" left="10.0" top="10.0" />
+                           </VBox.margin>
+                           <font>
+                              <Font size="20.0" />
+                           </font>
+                        </Text>
+                        <TextField fx:id="email" promptText="Enter your email">
+                           <VBox.margin>
+                              <Insets left="10.0" />
+                           </VBox.margin>
+                        </TextField>
                      </children>
-                  </HBox>
+                  </VBox>
+                  <VBox alignment="TOP_CENTER" prefHeight="211.0" prefWidth="169.0">
+                     <HBox.margin>
+                        <Insets left="160.0" />
+                     </HBox.margin>
+                     <children>
+                        <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="Profile picture">
+                           <VBox.margin>
+                              <Insets top="60.0" />
+                           </VBox.margin>
+                           <font>
+                              <Font size="20.0" />
+                           </font>
+                        </Text>
+                        <Button fx:id="image" mnemonicParsing="false" onAction="#add_image" style="-fx-background-color: #ffffff;" textFill="#d70000">
+                           <graphic>
+                              <ImageView fx:id="profileImage" fitHeight="150.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true">
+                                 <image>
+                                    <Image url="@../image/add_photo.png" />
+                                 </image>
+                              </ImageView>
+                           </graphic>
+                           <VBox.margin>
+                              <Insets top="20.0" />
+                           </VBox.margin>
+                        </Button>
+                     </children>
+                  </VBox>
                </children>
-            </AnchorPane>
-          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="100.0" prefWidth="160.0" style="-fx-background-color: #088f8f;">
+            </HBox>
+          <AnchorPane layoutY="360.0" minHeight="0.0" minWidth="0.0" prefHeight="79.0" prefWidth="700.0" style="-fx-background-color: #088f8f;">
                <children>
-                  <HBox prefHeight="183.0" prefWidth="264.0">
-                     <children>
-                        <VBox prefHeight="183.0" prefWidth="260.0">
-                           <children>
-                              <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="Password:">
-                                 <VBox.margin>
-                                    <Insets bottom="10.0" left="10.0" top="10.0" />
-                                 </VBox.margin>
-                                 <font>
-                                    <Font size="20.0" />
-                                 </font>
-                              </Text>
-                              <PasswordField fx:id="password">
-                                 <VBox.margin>
-                                    <Insets left="10.0" />
-                                 </VBox.margin>
-                              </PasswordField>
-                              <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="Repeat password:">
-                                 <VBox.margin>
-                                    <Insets bottom="10.0" left="10.0" top="10.0" />
-                                 </VBox.margin>
-                                 <font>
-                                    <Font size="20.0" />
-                                 </font>
-                              </Text>
-                              <PasswordField fx:id="repeatPassword">
-                                 <VBox.margin>
-                                    <Insets left="10.0" />
-                                 </VBox.margin>
-                              </PasswordField>
-                           </children>
-                        </VBox>
-                     </children>
-                  </HBox>
-                  <Button fx:id="save" layoutX="568.0" layoutY="120.0" mnemonicParsing="false" onAction="#save" style="-fx-background-color: #ffffff;">
+                  <Button fx:id="save" layoutX="570.0" layoutY="14.0" mnemonicParsing="false" onAction="#save" style="-fx-background-color: #ffffff;">
                      <graphic>
                         <ImageView fitHeight="100.0" fitWidth="100.0" pickOnBounds="true" preserveRatio="true">
                            <image>
@@ -152,7 +121,7 @@
                         </ImageView>
                      </graphic>
                   </Button>
-                  <Button fx:id="cancel" layoutX="434.0" layoutY="120.0" mnemonicParsing="false" onAction="#cancel" style="-fx-background-color: #ffffff;">
+                  <Button fx:id="cancel" layoutX="436.0" layoutY="14.0" mnemonicParsing="false" onAction="#cancel" style="-fx-background-color: #ffffff;">
                      <graphic>
                         <ImageView fitHeight="100.0" fitWidth="100.0" pickOnBounds="true" preserveRatio="true">
                            <image>
@@ -161,9 +130,14 @@
                         </ImageView>
                      </graphic>
                   </Button>
+                  <Hyperlink fx:id="forgotPassword" layoutX="6.0" layoutY="14.0" onAction="#forgotPassword" text="Change password?" textFill="WHITE">
+                     <font>
+                        <Font size="15.0" />
+                     </font>
+                  </Hyperlink>
                </children>
             </AnchorPane>
-        </items>
-      </SplitPane>
+         </children>
+      </AnchorPane>
    </center>
 </BorderPane>
